--- a/snapcategorizer.kv
+++ b/snapcategorizer.kv
@@ -18,6 +18,7 @@
                     
 <CameraWidget@Widget>:
     CameraPreview:
+        buttongrid:buttongrid
         id:camerapreview
         size: root.size
 
@@ -33,154 +34,53 @@
             cols:3
             size: root.size
 
-            ATButton:
-                index:1
-                custom_id: 'btn0'
-                text: camerapreview.btn_name[0]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn0'
+            #     text: camerapreview.btn_name[0]
 
-            ATButton:
-                index:1
-                custom_id: 'btn1'
-                text: camerapreview.btn_name[1]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn1'
+            #     text: camerapreview.btn_name[1]
 
-            ATButton:
-                index:1
-                custom_id: 'btn2'
-                text: camerapreview.btn_name[2]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn2'
+            #     text: camerapreview.btn_name[2]
 
-            ATButton:
-                index:1
-                custom_id: 'btn3'
-                text: camerapreview.btn_name[3]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn3'
+            #     text: camerapreview.btn_name[3]
 
-            ATButton:
-                index:1
-                custom_id: 'btn4'
-                text: camerapreview.btn_name[4]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn4'
+            #     text: camerapreview.btn_name[4]
 
-            ATButton:
-                index:1
-                custom_id: 'btn5'
-                text: camerapreview.btn_name[5]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn5'
+            #     text: camerapreview.btn_name[5]
 
-            ATButton:
-                index:1
-                custom_id: 'btn6'
-                text: camerapreview.btn_name[6]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn6'
+            #     text: camerapreview.btn_name[6]
 
-            ATButton:
-                index:1
-                custom_id: 'btn7'
-                text: camerapreview.btn_name[7]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn7'
+            #     text: camerapreview.btn_name[7]
 
-            ATButton:
-                index:1
-                custom_id: 'btn8'
-                text: camerapreview.btn_name[8]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn8'
+            #     text: camerapreview.btn_name[8]
 
-            ATButton:
-                index:1
-                custom_id: 'btn9'
-                text: camerapreview.btn_name[9]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn9'
+            #     text: camerapreview.btn_name[9]
 
-            ATButton:
-                index:1
-                custom_id: 'btn10'
-                text: camerapreview.btn_name[10]
-                background_color: 1,1,1,0
-                color: 1,1,1,.8
-                font_size:35
-                halign: 'center'
-                bold:True
-                center: root.width * 0.3, root.height * 0.3
-                on_press:camerapreview.capture_button(self)
-                on_long_press:camerapreview.popup_open(self)
+            # ATButton:
+            #     custom_id: 'btn10'
+            #     text: camerapreview.btn_name[10]
 
-            ATButton:
-                index:1
-                custom_id: 'btn11'
-                text: camerapreview.btn_name[11]
-                # center: root.width * 0.3, root.height * 0.3
+            # ATButton:
+            #     custom_id: 'btn11'
+            #     text: camerapreview.btn_name[11]
                 
 
         BoxLayout:
@@ -194,7 +94,7 @@
                 on_press:camerapreview.play()
                                     
             Button:
-                text: "AddButtons"
+                text: "[1]"
                 background_color: 1,1,1,0
                 color: 1,.3,.3,.5
                 font_size:35
@@ -202,12 +102,28 @@
                 on_press:buttongrid.add_buttons()
                                     
             Button:
-                text: "Load Default"
+                text: "[2]"
                 background_color: 1,1,1,0
                 color: 1,.3,.3,.5
                 font_size:35
                 bold:True
-                on_press:camerapreview.load_button()
+                on_press:buttongrid.add_buttons(offset = 12)
+                                    
+            Button:
+                text: "[3]"
+                background_color: 1,1,1,0
+                color: 1,.3,.3,.5
+                font_size:35
+                bold:True
+                on_press:buttongrid.add_buttons(offset = 24)
+                                    
+            # Button:
+            #     text: "Default"
+            #     background_color: 1,1,1,0
+            #     color: 1,.3,.3,.5
+            #     font_size:35
+            #     bold:True
+            #     on_press:camerapreview.load_default_settings()
 
 
 <PopupMenu>
@@ -230,7 +146,7 @@
         multiline:False
 
     Button:
-        text: 'Submit&Close'
+        text: 'Save&Close'
         on_release: 
             root.update_setting(root.popup_text[0], input2.text, input3.text)
             root.popup_close()
