--- a/snapcategorizer.kv
+++ b/snapcategorizer.kv
@@ -33,54 +33,6 @@
             rows:4
             cols:3
             size: root.size
-
-            # ATButton:
-            #     custom_id: 'btn0'
-            #     text: camerapreview.btn_name[0]
-
-            # ATButton:
-            #     custom_id: 'btn1'
-            #     text: camerapreview.btn_name[1]
-
-            # ATButton:
-            #     custom_id: 'btn2'
-            #     text: camerapreview.btn_name[2]
-
-            # ATButton:
-            #     custom_id: 'btn3'
-            #     text: camerapreview.btn_name[3]
-
-            # ATButton:
-            #     custom_id: 'btn4'
-            #     text: camerapreview.btn_name[4]
-
-            # ATButton:
-            #     custom_id: 'btn5'
-            #     text: camerapreview.btn_name[5]
-
-            # ATButton:
-            #     custom_id: 'btn6'
-            #     text: camerapreview.btn_name[6]
-
-            # ATButton:
-            #     custom_id: 'btn7'
-            #     text: camerapreview.btn_name[7]
-
-            # ATButton:
-            #     custom_id: 'btn8'
-            #     text: camerapreview.btn_name[8]
-
-            # ATButton:
-            #     custom_id: 'btn9'
-            #     text: camerapreview.btn_name[9]
-
-            # ATButton:
-            #     custom_id: 'btn10'
-            #     text: camerapreview.btn_name[10]
-
-            # ATButton:
-            #     custom_id: 'btn11'
-            #     text: camerapreview.btn_name[11]
                 
 
         BoxLayout:
@@ -94,28 +46,12 @@
                 on_press:camerapreview.play()
                                     
             Button:
-                text: "[1]"
+                text: "NEXT\nPAGE"
                 background_color: 1,1,1,0
                 color: 1,.3,.3,.5
                 font_size:35
                 bold:True
-                on_press:buttongrid.add_buttons()
-                                    
-            Button:
-                text: "[2]"
-                background_color: 1,1,1,0
-                color: 1,.3,.3,.5
-                font_size:35
-                bold:True
-                on_press:buttongrid.add_buttons(offset = 12)
-                                    
-            Button:
-                text: "[3]"
-                background_color: 1,1,1,0
-                color: 1,.3,.3,.5
-                font_size:35
-                bold:True
-                on_press:buttongrid.add_buttons(offset = 24)
+                on_press:buttongrid.refreshAndSwitchButtonSet(mode='next')
                 
             # Button:
             #     text: "Default"
@@ -123,14 +59,15 @@
             #     color: 1,.3,.3,.5
             #     font_size:35
             #     bold:True
-            #     on_press:camerapreview.load_default_settings()
-            Button:
-                text: "Max"
-                background_color: 1,1,1,0
-                color: 1,.3,.3,.5
-                font_size:35
-                bold:True
-                on_press:camerapreview.add_button()
+            # #     on_press:camerapreview.load_default_settings()
+            # Button:
+            #     text: "Max"
+            #     background_color: 1,1,1,0
+            #     color: 1,.3,.3,.5
+            #     font_size:35
+            #     bold:True
+            #     # on_press:camerapreview.add_button()
+            #     on_press:buttongrid.test_children()
 
 
 <PopupMenu>
