--- a/snapcategorizer.kv
+++ b/snapcategorizer.kv
@@ -35,8 +35,9 @@
             size: root.size
                 
 
-        BoxLayout:
+        MenuButtons:
             size_hint_y: 0.2
+            id:menubuttons
             Button:
                 text: "I/O"
                 background_color: 1,1,1,0
