--- a/snapcategorizer.kv
+++ b/snapcategorizer.kv
@@ -69,13 +69,13 @@
                     bold:True
                     on_press:camerapreview.load_json_popup_open()
                                         
-                Button:
-                    text: "LORD\nTEST"
-                    background_color: 1,1,1,0
-                    color: 1,.3,.3,.5
-                    font_size:35
-                    bold:True
-                    on_press:camerapreview.test()
+                # Button:
+                #     text: "LORD\nTEST"
+                #     background_color: 1,1,1,0
+                #     color: 1,.3,.3,.5
+                #     font_size:35
+                #     bold:True
+                #     on_press:camerapreview.test()
                                         
                 # Button:
                 #     text: "EXPORT\nJSON"
